--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ click==8.1.8
 dnspython==2.7.0
 Flask==3.1.0
 Flask-Bcrypt==1.0.1
+gunicorn==23.0.0
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==24.2
 pymongo==4.11.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
